# log-analysis-ai

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.minimal  LARGE_FILE_PROCESSING.md  LOGBERT.md  PERFORMANCE_TEST.md  PREPROCESSOR.md  README.md  cmakefix.cmake  docker-compose.minimal.yml  docker-compose.yml  minimal_server.cpp  plugins_config.json  requirements.txt  run-large-perf-test-no-simd.sh  run-large-perf-test.sh  run-logbert-test.sh  start-minimal.sh  start.sh
docs/: DOCKER.md  LARGE_FILE_PROCESSING.md  web_server.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: AnalysisView.tsx  ChatInterface.tsx  LogExplorer.tsx
logai-next-ui/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
logai-next-ui/app/: layout.tsx  page.tsx
logai-next-ui/app/analysis/: page.tsx
logai-next-ui/app/upload/: page.tsx
logai-next-ui/components/: Navigation.tsx  UploadProgressBar.tsx
logai-next-ui/styles/: globals.css
python/: README.md  data_analysis_agent.py  logai_agent.py  logai_server.py  requirements.txt  setup.py  specialized_agents.py  vector_store.py
python/logai_cpp/: __init__.py  milvus_client.py
scripts/: build-test.sh  run-docker.sh  run-feature-extractor-test.sh  run-large-perf-test.sh  run-logbert-unit-tests.sh  run-logbert-with-model.sh  run-perf-test.sh  run-preprocessor-test.sh
src/: CMakeLists.txt  CMakeLists.txt.bak  csv_parser.cpp  csv_parser.h  data_loader_config.h  dbscan_clustering.cpp  dbscan_clustering.h  dbscan_clustering_kdtree.cpp  dbscan_clustering_kdtree.h  dbscan_kdtree_test.cpp  dbscan_test.cpp  drain_parser.cpp  drain_parser.h  feature_extractor.cpp  feature_extractor.h  feature_extractor_test.cpp  feature_extractor_test.cpp.bak  file_data_loader.cpp  file_data_loader.h  json_parser.cpp  json_parser.h  label_encoder.cpp  label_encoder.h  label_encoder_test.cpp  large_perf_test.cpp  log_anomaly_detection_example.cpp  log_parser.h  log_record.h  logbert_test.cpp  logbert_unit_test.cpp  logbert_vectorizer.cpp  logbert_vectorizer.h  memory_mapped_file.cpp  memory_mapped_file.h  one_class_svm.cpp  one_class_svm.h  one_class_svm_test.cpp  perf_test.cpp  preprocessor.cpp  preprocessor.h  (+13 more)
src/web_server/: CMakeLists.txt  LogAIServer.cpp
src/web_server/controllers/: AnomalyDetectionController.cpp  AnomalyDetectionController.h  ApiController.h  BasicApiController.cpp  BasicApiController.h  LogParserController.cpp  LogParserController.h
src/web_server/web/: anomaly_detection.html  index.html  swagger.json
